# iai_robots

iai_boxy_description/robots/: boxy_description.urdf.xacro
iai_kuka_lwr4_description/urdf/: kuka_lwr_arm.urdf.xacro
iai_test_camera/: CMakeLists.txt  package.xml  readme.md
iai_test_camera/launch/: upload.launch
iai_test_camera/urdf/: test_camera.urdf
